Implemented workaround for JDK 16+
please remove once Cerebro uses more recent versions of Play framework